# demultiplexing

./: .bumpversion.cfg  .coverage  .gitignore  .niptrc  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  DEPLOYMENT.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE
.github/workflows/: black.yml  coveralls.yml  installations.yml  lint_and_install.yml  linting.yml
container/bcl2fastq/: Dockerfile
demux/: __main__.py  basemask.py  cli.py  exc.py  samplesheet.py
demux.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
demux/cli/: .samplesheet.py.swp  __init__.py  base.py  basemask.py  indexreport.py  samplesheet.py
demux/constants/: __init__.py  constants.py  indexreport.py  samplesheet.py
demux/utils/: __init__.py  hiseq2500_samplesheet.py  html.py  indexreport.py  novaseq_samplesheet.py  runparameters.py  (+1 more)
files/: 20181012_Indices.csv
scripts/: 2-hiseq-deliver.bash  checkfornewrun.bash  contamination_check.bash  contamination_check.py  deletesamplesfromflowcell_dbserver.py  demux.bash  demux.functions  demux.v5.bash  demux_miseq.sh  demux_nipt.bash  demux_nipt_multiple.bash  depulse.bash  getfastq.batch  getfastq2.bash  getfastq2_project.bash  insert_create_stats.bash  massagenipt.py  mergefastq.bash  nipt_resend.bash  parsedemux.py  parseunaligned_dbserver.py  recreatestats.bash  samplesheet.py  selectdemux.py  selectunaligned_dbserver.py  sendnipt.bash  syncnipt.bash  undetermined.batch  validatenipt.py
tests/: conftest.py  test.bash
(+97 files in other folders)
