[tool.poetry]
name = "demux"
version = "0.1.0"
description = "Application for demultiplexing sequence data"
authors = ["henrikstranneheim <henrik.stranneheim@scilifelab.se>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^5.3.1"
psutil = "^5.7.3"
"path.py" = "^12.5.0"
click = "^6.7.0"
cglims = "^1.3.4"
six = "^1.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
